@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Added support for QR codes.
+
     - [GH-44] The X coordinate returned by $text->position() or (deprecated)
       $text->textpos() was incorrect when read after being set twice (report by
       Johan Vromans).
